--- a/style.css
+++ b/style.css
@@ -226,7 +226,8 @@ footer .container p a {
 footer .container p a:hover {
   text-decoration: underline;
 }
-@media (max-width: 765px) {
+
+@media (max-width: 900px) {
   .container {
     flex-direction: column;
   }
@@ -237,6 +238,9 @@ footer .container p a:hover {
     max-width: 100%;
     padding-bottom: 8rem;
   }
+}
+
+@media (max-width: 765px) {
   .footer-signature {
     width: 400px;
     top: 80%;
